# accio-ingestor

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  package-lock.json  pyproject.toml  pyrightconfig.json  requirements.txt
src/accio-ingestor/: __init__.py  config.py  gui.py  importer.py  logging_cfg.py  main.py  schema.py
src/accio_ingestor/: audit.py  config.py  gui.py  hashing.py  importer.py  jobs.py  main.py  ocr.py  pdf_utils.py  pii.py  queue.py  s3uploader.py  settings_store.py  slack.py  theme.qss  watcher.py
tests/: test_end_to_end.py  test_importer.py  test_pdf_ocr.py  test_queue_retry.py  test_s3_uploader.py
