[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "accio-ingestor"
version = "0.1.0"
description = "Offline-first PDF/Image ingestor with S3 + Accio and Slack notifications"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Delvechio Designs", email = "info@it3tc.com" }]
license = { text = "MIT" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
